# calc

./: Cargo.toml  README.md
.github/workflows/: push.yml  release.yml
src/: convert.rs  eval.rs  interactive.rs  main.rs
