[package]
name = "calc"
version = "0.1.2"
edition = "2021"
authors = ["Mike Lloyd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
eval = "0.4.3"
regex = "1.5.4"
rink-core = "0.6.2"
